src/test/resources/purescript_examples/passing/NamedPatterns.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('foo')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PsiElement(\)('\')
            PureASTWrapperElement(Abs)
              PsiElement(identifier)('x')
              PsiElement(whitespace)(' ')
            PsiElement(->)('->')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Value)
              PureASTWrapperElement(PrefixValue)
                PureASTWrapperElement(Case)
                  PsiElement(case)('case')
                  PsiElement(whitespace)(' ')
                  PureASTWrapperElement(Value)
                    PureASTWrapperElement(PrefixValue)
                      PureASTWrapperElement(Var)
                        PureASTWrapperElement(Qualified)
                          PsiElement(identifier)('x')
                          PsiElement(whitespace)(' ')
                  PsiElement(of)('of')
                  PsiElement(whitespace)(' \n    ')
                  PureASTWrapperElement(CaseAlternative)
                    PureASTWrapperElement(Binder)
                      PureASTWrapperElement(BinderAtom)
                        PureASTWrapperElement(NamedBinder)
                          PsiElement(identifier)('y')
                          PsiElement(operator)('@')
                          PureASTWrapperElement(Binder)
                            PureASTWrapperElement(BinderAtom)
                              PureASTWrapperElement(ObjectBinder)
                                PsiElement({)('{')
                                PsiElement(whitespace)(' ')
                                PureASTWrapperElement(identifier)
                                  PsiElement(identifier)('foo')
                                PsiElement(whitespace)(' ')
                                PsiElement(=)('=')
                                PsiElement(whitespace)(' ')
                                PureASTWrapperElement(Binder)
                                  PureASTWrapperElement(BinderAtom)
                                    PureASTWrapperElement(StringBinder)
                                      PsiElement(string)('"Foo"')
                                      PsiElement(whitespace)(' ')
                                PsiElement(})('}')
                                PsiElement(whitespace)(' ')
                    PsiElement(->)('->')
                    PsiElement(whitespace)(' ')
                    PureASTWrapperElement(Value)
                      PureASTWrapperElement(PrefixValue)
                        PureASTWrapperElement(Var)
                          PureASTWrapperElement(Qualified)
                            PsiElement(identifier)('y')
                            PsiElement(whitespace)('\n    ')
                  PureASTWrapperElement(CaseAlternative)
                    PureASTWrapperElement(Binder)
                      PureASTWrapperElement(BinderAtom)
                        PureASTWrapperElement(VarBinder)
                          PsiElement(identifier)('y')
                          PsiElement(whitespace)(' ')
                    PsiElement(->)('->')
                    PsiElement(whitespace)(' ')
                    PureASTWrapperElement(Value)
                      PureASTWrapperElement(PrefixValue)
                        PureASTWrapperElement(Var)
                          PureASTWrapperElement(Qualified)
                            PsiElement(identifier)('y')
                            PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Debug')
                  PsiElement(.)('.')
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Trace')
                  PsiElement(.)('.')
                PsiElement(identifier)('trace')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
